--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </style>
 </head>
   <body>
-    <div id="root"></div>
+    <div id="root">El servicio no estas disponible</div>
   </body>
 </html>
