Update domain and support email in error message

--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
 
     <div class="details">
       <strong>Error de resolución o conexión:</strong><br>
-      El nombre de dominio <code>mipagina.com</code> no puede ser resuelto por tu proveedor de internet (DNS),<br>
+      El nombre de dominio <code>quantha.com</code> no puede ser resuelto por tu proveedor de internet (DNS),<br>
       o el servidor está caído y no responde a las solicitudes.
     </div>
 
     <p class="support">
       Si el problema persiste por más de unos minutos,<br>
       por favor comuníquese con soporte técnico en:<br>
-      <a href="mailto:mipagina@soporte.com">mipagina@soporte.com</a>
+      <a href="mailto:mipagina@soporte.com">soporte@quantha.com</a>
     </p>
 
     <div class="footer">
